fix the indicator sticky position wrapped the App.js in BrowserRouter in the index.js change the App.js into functional component

--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -7,7 +7,6 @@ div.container-beacon{
   flex-direction: column;
   min-width: 320px;
   min-height: 100vh;
-  overflow: hidden;
 
   section.section-beacon{
     width: 100%;
@@ -32,4 +31,8 @@ div.container-beacon{
       margin: auto;
     }
   }
+}
+
+div.landing-page-beacon{
+  overflow: hidden;
 }
